# simde

./: .drone.star  .drone.yml  .packit.yml  .travis.yml
.github/workflows/: ci.yml
.packit/: show_version.sh  simde.spec
simde/simd-js/: float32x4.h  int32x4.h
test/: CMakeLists.txt  meson.build  run-tests.c  run-tests.h  test.h
test/arm/: arm-internal.h
test/arm/neon/: meson.build  vadd.c  vdup_n.c  vmul.c  vsub.c
test/simd-js/: float32x4.c  int32x4.c  meson.build  simd-js.h  test-js-internal.h  test-js.c  test-js.h
test/x86/: avx.c  avx2.c  fma.c  isa.c  meson.build  mmx.c  sse.c  sse2.c  sse3.c  sse4.1.c  sse4.2.c  ssse3.c  test-x86-internal.h  test-x86.c  test-x86.h  x86-internal.h
test/x86/mmx/: mmx.c
test/x86/sse/: sse.c
test/x86/sse2/: sse2.c
test/x86/sse4.1/: sse4.1.c
